--- a/work8/spring-market/frontend-server/src/main/resources/static/index.html
+++ b/work8/spring-market/frontend-server/src/main/resources/static/index.html
@@ -5,6 +5,7 @@
     <title>Spring market</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular-route.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.11/ngStorage.min.js"></script>
 </head>
 <body>
 <h1>Market</h1>
